[gd_scene load_steps=5 format=2]

[ext_resource path="res://MainGame/Maps/Lab/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://MainGame/MainGameScene.tscn" type="PackedScene" id=2]
[ext_resource path="res://MainGame/ViewPortControll/Camera2D.gd" type="Script" id=3]
[ext_resource path="res://MainGame/ViewPortControll/3P.gd" type="Script" id=4]


[node name="Game" type="Node"]
script = ExtResource( 4 )

[node name="Viewports" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 4

[node name="ViewportContainer1" type="ViewportContainer" parent="Viewports"]
margin_right = 640.0
margin_bottom = 176.0
size_flags_horizontal = 5
size_flags_vertical = 3
stretch = true

[node name="Viewport1" type="Viewport" parent="Viewports/ViewportContainer1"]
size = Vector2( 640, 176 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="Viewports/ViewportContainer1/Viewport1"]
current = true
smoothing_enabled = true
script = ExtResource( 3 )

[node name="MainGameScene" parent="Viewports/ViewportContainer1/Viewport1" instance=ExtResource( 2 )]

[node name="ParallaxBackground" parent="Viewports/ViewportContainer1/Viewport1" instance=ExtResource( 1 )]

[node name="HBoxContainer" type="HBoxContainer" parent="Viewports"]
margin_top = 180.0
margin_right = 640.0
margin_bottom = 360.0
rect_min_size = Vector2( 640, 180 )

[node name="ViewportContainer2" type="ViewportContainer" parent="Viewports/HBoxContainer"]
margin_right = 318.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport2" type="Viewport" parent="Viewports/HBoxContainer/ViewportContainer2"]
size = Vector2( 318, 180 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="Viewports/HBoxContainer/ViewportContainer2/Viewport2"]
current = true
smoothing_enabled = true
script = ExtResource( 3 )

[node name="ParallaxBackground" parent="Viewports/HBoxContainer/ViewportContainer2/Viewport2" instance=ExtResource( 1 )]

[node name="ViewportContainer3" type="ViewportContainer" parent="Viewports/HBoxContainer"]
margin_left = 322.0
margin_right = 640.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport3" type="Viewport" parent="Viewports/HBoxContainer/ViewportContainer3"]
size = Vector2( 318, 180 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="Viewports/HBoxContainer/ViewportContainer3/Viewport3"]
current = true
smoothing_enabled = true
script = ExtResource( 3 )

[node name="ParallaxBackground" parent="Viewports/HBoxContainer/ViewportContainer3/Viewport3" instance=ExtResource( 1 )]
